# tinygpt

./: .gitignore  README.md  bigram.py  gpt.py  input_rick_morty.txt  pyproject.toml
data/: fetch.py
tinygpt/: gen.py  model.py  tokenizer.py  train.py
