[project]
name = "tinygpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=5.0.0",
    "httpx>=0.28.1",
    "kagglehub[pandas-datasets]>=1.0.1",
    "numpy>=2.4.6",
    "tinygrad>=0.13.0",
    "tqdm>=4.68.0",
]

[project.scripts]
tinygpt = "tinygpt.gen:main"
tinygpt-train = "tinygpt.train:train"

[dependency-groups]
dev = [
    "marimo>=0.23.9",
    "ruff>=0.15.16",
    "ty>=0.0.44",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "tinygpt"
module-root = ""
